# httpsig

./: .gitignore  Cargo.toml  README.md
httpsig-validator/: Cargo.toml  README.md  public.pem
httpsig-validator/src/: error.rs  main.rs  mock_request.rs
src/: actix_web_impls.rs  algorithm.rs  canonicalize.rs  derived.rs  errors.rs  lib.rs  reqwest_impls.rs  signature_component.rs  signature_input.rs  signature_params.rs  signing.rs  verifying.rs
src/algorithm/: openssl.rs  ring.rs
test_data/: basic_request.txt  ecc-private.pem  ecc-public.pem  rsa-private.pem  rsa-public.pem  signed_request.txt
