[package]
name = "httpsig"
description = "Implementation of the IETF draft 'HTTP Message Signatures'"
version = "0.1.0"
authors = ["David Skyberg <davidskyberg@gmail.com>", "Jack Cargill <jack@passfort.com>", "Diggory Blake"]
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/crate/httpsig"
repository = "https://github.com/dskyberg/httpsig"
homepage = "https://github.com/dskyberg/httpsig"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["httpsig-validator"]

[dependencies]
# crates for  actix-web ServiceRequest as ServerRequestLike
actix-http = { version = "3.0.4", optional = true }
actix-web = { version = "4.0.1", optional = true }
futures-util = { version = "0.3.7", default-features = false, features = ["std"], optional = true }

anyhow = "1.0.28"
base64 = "0.12.0"
chrono = "0.4.11"
hmac = "0.7.1"
http = "0.2.5"
itertools = "0.9.0"
log = "0.4.8"
openssl = { version = "0.10.38", optional = true }
pem = "1.0.2"
reqwest = {version = "0.11", features = ["blocking"], optional = true}
ring = { version = "0.16.12", features = ["std"], optional = true }
sha2 = "0.8.1"
spki = { version = "0.5.4", features = ["alloc", "pem", "std"] }
subtle = "2.2.2"
sfv = "0.9.2"
thiserror = "1.0.15"
url = "2.2"

[features]
default = ["ring", "reqwest" ]
actix = ["actix-http", "actix-web", "futures-util" ]
