[package]
name = "httpsig"
description = "Implementation of the IETF draft 'HTTP Message Signatures'"
version = "0.1.1"
authors = ["David Skyberg <davidskyberg@gmail.com>", "Jack Cargill <jack@passfort.com>", "Diggory Blake"]
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/crate/httpsig"
repository = "https://github.com/dskyberg/httpsig"
homepage = "https://github.com/dskyberg/httpsig"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["httpsig-validator"]

[dependencies]
# crates for  actix-web ServiceRequest as ServerRequestLike
actix-http = { version = "3.0.4", optional = true }
actix-web = { version = "4.0.1", optional = true }
futures-util = { version = "0.3.7", default-features = false, features = ["std"], optional = true }

base64 = "0.21"
chrono = "0.4"
hmac = "0.12"
http = "0.2.5"
itertools = "0.11"
log = "0.4"
openssl = { version = "0.10", optional = true }
pem = "1.0.2"
reqwest = {version = "0.11", features = ["blocking"], optional = true}
ring = { version = "0.16", features = ["std"], optional = true }
sha2 = "0.10"
spki = { version = "0.7", features = ["alloc", "pem", "std"] }
subtle = "2.5"
sfv = "0.9"
thiserror = "1.0"
url = "2.4"

[features]
default = ["ring", "reqwest" ]
actix = ["actix-http", "actix-web", "futures-util" ]
